<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".activities.HomeActivity">

    <Button
        android:id="@+id/btn_oficinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rounded_blue_dark"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
        android:drawablePadding="-60dp"
        android:paddingEnd="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ver"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_oficinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:text="@string/oficinas"
        android:textColor="@color/blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/btn_enviar"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bienvenido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/txt_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:text="@string/enviar_documentos"
        android:textColor="@color/blue_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:drawableStartCompat="@drawable/ic_baseline_description_24"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_blue"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
        android:drawablePadding="-60dp"
        android:paddingEnd="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enviar"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:text="@string/ver_documentos"
        android:textColor="@color/pink_sophos"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/btn_enviar"
        app:drawableStartCompat="@drawable/ic_baseline_find_in_page_24"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_pink"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
        android:drawablePadding="-60dp"
        android:paddingEnd="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ver"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>